# h4g-2025

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 06a63fcb638f_.py  07a02f7163a3_init_user_model.py  0ea9438c8977_add_transaction_and_voucher_task.py  138785bdc79d_add_suspended.py  161a97827e00_add_reports_model.py  207834ab2959_rename_desc_to_justification.py  29b276aba922_add_orders.py  306d60368f1d_add_description.py  53570ce21d48_add_auction.py  5ad0780ec189_add_name_to_product.py  8ca7872dd4e2_add_logs.py  90123f8ae3df_add_description.py  b406ab451e05_add_voucher_task_models.py  d7914c838e5c_actually_add_products.py  dfa96de9f599_transaction_model.py  f3baaacdbbbc_add_image_to_user.py
backend/src/: app.py
backend/src/auctions/: models.py  router.py  schemas.py
backend/src/audit_logs/: models.py  schemas.py
backend/src/auth/: dependencies.py  models.py  router.py  schemas.py  schemas_base.py  utils.py
backend/src/barcode/: router.py  schema.py
backend/src/common/: base.py  constants.py
backend/src/files/: router.py
backend/src/orders/: models.py  router.py  schemas.py
backend/src/products/: models.py  router.py  schemas.py
backend/src/reports/: models.py  router.py  schemas.py
backend/src/transactions/: models.py  router.py  schemas.py
backend/src/users/: router.py
backend/src/utils/: models.py
backend/src/voucherTask/: models.py  router.py  schemas.py
backend/src/voucher_task/: dependencies.py  models.py  router.py  schema.py
frontend/: index.html  (+4 more)
(+82 files in other folders)
