[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic-postgresql-enum>=1.5.0",
    "alembic>=1.14.0",
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.6",
    "jwt>=1.3.1",
    "mypy>=1.14.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.0",
    "sqlalchemy>=2.0.37",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "alembic-postgresql-enum>=1.5.0",
]
